--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Air Quality and Disease</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <!-- CSS Scripts -->
   <link rel="stylesheet" href="d3Style.css">
-  <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
 
@@ -29,26 +37,68 @@
         <h1>Air Pollution and Public Health</h1>
       </div>
     </div>
+
+    <!-- zip code bar -->
+    <div class="row">
+      <form>
+        <div class="form-group">
+          <p>Enter your zip code:</p>
+          <ul class="list-group" id="filters">
+            <li class="filter list-group-item">
+              <label for="zip">Zip Code:</label>
+              <input class="form-control" id="search-criteria" type="text" placeholder="enter search">
+            </li>
+          </ul>
+        </div>
+        <button id="filter-btn" type="submit" class="btn btn-default">Search</button>
+      </form>
+    </div>
+
+    <!-- heatmap section -->
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div id="heatmap">
-          <!-- We append our chart here. -->
+          <!-- heatmap goes here. -->
         </div>
       </div>
     </div>
+
+    <!-- graph section -->
     <div class="row">
       <div class="col-xs-12  col-md-9">
-        <div class="article">
-          <h2>Correlations Between Air Pollution and Public Health</h2>
-          <p>Paragraph 1 blah blah blah</p>
-
-          <p>Paragraph 2 blah blah blah</p>
-
-          <p>Paragraph 3 blah blah blah</p>
+        <div id="graph">
+          <!-- svg/graph goes here. historical data on your zipcode vs national average-->
         </div>
+      </div>
+    </div>
+
+    <!-- politician section -->
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Contact Your Representatives!</h3>
+          </div>
+          <div id="politicians-card" class="panel-body">
+                    <!-- politician info card goes here. name and contact information for your representative-->
+          </div>
+        </div>
+      </div>
+    </div>
+  
+
+  <div class="row">
+    <div class="col-xs-12  col-md-9">
+      <div class="article">
+        <h2>Correlations Between Air Pollution and Public Health</h2>
+        <p>Paragraph 1- we explain what this project is</p>
+        <p>Paragraph 2- why you should care about air quality - health, environment, etc</p>
+        <p>Paragraph 3- what you can do about it, ie: contact your representatives</p>
       </div>
     </div>
   </div>
+  </div>
+</div>
 
   <!-- Footer-->
   <div id="footer">
@@ -56,23 +106,15 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <!-- js files -->
+  <script type="text/javascript" src="graph.js"></script>
+  <script type="text/javascript" src="heatmap.js"></script>
+  <script type="text/javascript" src="politicians.js"></script>
   <!-- API key -->
   <script type="text/javascript" src="config.js"></script>
   <!-- Leaflet heatmap plugin-->
-  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>  
+  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 
 </body>
-
-</html>
-
-
-
-
-
-
-
-
-  </body>
 
 </html>
