--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <!-- CSS Scripts -->
   <link rel="stylesheet" href="d3Style.css">
-  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
