--- a/heatmap.html
+++ b/heatmap.html
@@ -17,14 +17,11 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-    crossorigin=""></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- Leaflet --><link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
+    
   <!-- CSS Scripts -->
   <link rel="stylesheet" href="d3Style.css">
   <link rel="stylesheet" href="style.css" />
@@ -69,24 +66,22 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        
+      </div>
+    </div>
 
   <!-- Footer-->
   <div id="footer">
     <p>By Winnie, Lei, and Rob</p>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+    <!-- Leaflet heatmap plugin-->
+    <script type="text/javascript" src="leaflet-heat.js"></script>
   <!-- API key -->
   <script type="text/javascript" src="config.js"></script>
-  
-  <!-- js files -->
-  <script type="text/javascript" src="graph.js"></script>
   <script type="text/javascript" src="heatmap.js"></script>
-  <script type="text/javascript" src="politicians.js"></script>
-  <script type="text/javascript" src="leaflet-heat.js"></script>
-  
 
 
 </body>
-
 </html>
