--- a/heatmap.html
+++ b/heatmap.html
@@ -68,7 +68,21 @@
     </div>
     <div class="row">
       <div class="col-xs-12  col-md-9">
-        
+          <h3>
+              What is PM 2.5?
+              </h3>
+        <p>
+          The above figure shows PM2.5 readings from air quality stations around the world.  PM2.5 refers to atmospheric particulate matter (PM) that have a diameter of less than 2.5 micrometers, which is about 3% the diameter of a human hair. PM2.5 particles are very small and can only be detected with an electron microscope. These very small particles may come from a variety of sources including power plants, motor vehicles, airplanes, residential wood burning, forest fires, agricultural burning, volcanic eruptions and dust storms, either emitted directly into the air or are formed in the atmosphere.
+        </p>
+        <p>
+        Due to their small size, they tend to stay longer than heavier particles in the air we breathe, increasing the likelihood of inhalation by humans and animals. They are able to penetrate deep into the lungs and potentially the circulatory system. While more studies may be needed, exposure to PM2.5 particles may play a role in health complications including heart disease, lung disease, and exacerbations of chronic conditions such as asthma, heart attack, bronchitis and other respiratory problems. 
+      </p>
+      <h3>
+      How much is too much?
+      </h3>
+    <p>
+          On a very clear and non-hazy day, the PM2.5 concentration can be as low as 5 μg/m3 or below. The 24-hour concentration of PM2.5 is considered unhealthy when it rises above 35.4 μg/m3.
+        </p>  
       </div>
     </div>
 
